@@ -18,12 +18,15 @@ modules = \
 #        psana_examples.DumpEpics \
         psana_examples.DumpEvr \
         psana_examples.DumpFccd \
+        psana_examples.DumpFli \
         psana_examples.DumpIpimb \
         psana_examples.DumpLusi \
         psana_examples.DumpOpal1k \
         psana_examples.DumpPnccd \
         psana_examples.DumpPrinceton \
-        psana_examples.DumpPulnix
+        psana_examples.DumpPulnix \
+        psana_examples.DumpQuartz \
+        psana_examples.DumpTimepix
 
 [psana.PrintSeparator]
 separator = =
@@ -65,6 +68,9 @@ source = :Evr
 [psana_examples.DumpFccd]
 source = :Fccd
 
+[psana_examples.DumpFli]
+source = :Fli
+
 [psana_examples.DumpIpimb]
 source = :Ipimb
 
@@ -83,3 +89,9 @@ source = :Princeton
 
 [psana_examples.DumpPulnix]
 source = :Tm6740
+
+[psana_examples.DumpQuartz]
+source = :Quartz4A150
+
+[psana_examples.DumpTimepix]
+source = :Timepix
